Remove unnecessary exports in bash scripts
Signed-off-by: Njagi Mwaniki <njagi@urbanslug.com>

--- a/Notes/mapping.org
+++ b/Notes/mapping.org
@@ -1,9 +1,9 @@
 * edgyeet
 ** Chopped
-SPOA produces single nucleotide long nodes so in a sense the graph is "auto chopped"
+[[https://github.com/ekg/spoa][SPOA]] (classic POA & [[https://github.com/yangao07/abPOA][abPOA]]) produces single nucleotide long nodes so in a sense the graph is "auto chopped".
 
 *** Indexing
-Indexing takes about a second ([[../Scripts/mapping_edgyeet.sh]])
+Indexing takes about a second ([[../Scripts/mapping_edgyeet.sh]]).
 
 *** Mapping
 Mapping using edgyeet ([[../Scripts/mapping_edgyeet.sh]]) with the "chopped" graph produced the 4.0K GAF below very quickly
@@ -12,7 +12,7 @@ Mapping using edgyeet ([[../Scripts/mapping_edgyeet.sh]]) with the "chopped" gra
 http://collections.lugli.arvadosapi.com/c=f84e8c45d6f02e3c49237d68897af29f+126/sequence.fasta   30857   309     30857   +       >60518>60519>60520>60521>60522>60524>60525>60526>60539>60540>60541>60542>60547>60548>60549>60550>60554>60555>60556>60557>60558>60559>60560>60564>60567>60570>60571>60572>60573>60574>60575>60576>60577>60579>60580>60581>60582>60583>60584>60585>60588>60589>60592>60593>60595>60596>60600>60601>60602>60603>60604>60605>60606>60607>60608>60609>60610>60611>60612>60613>60614>60615>60616>60619>60624>60626>60627>60628>60629>60631>60632>60633>60634>60635>60636>60637>60638>60639>60640>60641>60642>60644>60647>60648>60649>60651>60652>60654>60655>60656>60666>60668>60669>60670>60671>60672>60673>60674>60675      169     0       169     169     169     70      as:i:166        ta:Z:primary    cs:f:0 ac:i:0   cg:Z:166=3N
 #+END_SRC
 
-** Unhopped
+** Unchopped
 
 * GraphAlingner
 ** Chopped
