--- a/Notes/mapping.org
+++ b/Notes/mapping.org
@@ -13,6 +13,8 @@ http://collections.lugli.arvadosapi.com/c=f84e8c45d6f02e3c49237d68897af29f+126/s
 #+END_SRC
 
 ** Unchopped
+TODO: run edgyeet with unchopped GFA
+
 
 * GraphAlingner
 ** Chopped
@@ -36,3 +38,31 @@ GraphAligner: /gnu/store/vbrnww5jk5yik9k1x21hbxlyx38v2bv4-sdsl-lite-2.1.1/includ
 ** Unchopped
 Unchop the graph using odgi unchop [[../Scripts/unchop.sh]]
 Align/Map using [[../Scripts/mapping_graphalinger.sh]]
+
+#+BEGIN_SRC
+$ GraphAligner -t 4 -g $COVID_GFA_CHOPPED -f $SEQUENCES -a $OUTPUT_GA_FASTA
+GraphAligner 1.0.10
+GraphAligner 1.0.10
+Load graph from data/relabeledSeqs.sorted_by_quality_and_len.g6.unchop.gfa
+Build alignment graph
+133314 original nodes
+133318 split nodes
+43398 ambiguous split nodes
+235614 edges
+68881 nodes with in-degree >= 2
+Build minimizer seeder from the graph
+Minimizer seeds, length 19, window size 30, per chunk count 5, chunk size 100
+Initial bandwidth 5, ramp bandwidth 10, tangle effort 10000
+write alignments to output/first_sequence_graphaligner.gaf
+Align
+Alignment finished
+Input reads: 12215 (364194140bp)
+Seeds found: 106794
+Seeds extended: 24425
+Reads with a seed: 12215 (364194140bp)
+Reads with an alignment: 12215
+Alignments: 24361 (330520012bp)
+End-to-end alignments: 0 (0bp)
+#+END_SRC
+
+Produces a 1.2G GAF file which makes more sense.
