--- a/Notes/mapping.org
+++ b/Notes/mapping.org
@@ -66,3 +66,13 @@ End-to-end alignments: 0 (0bp)
 #+END_SRC
 
 Produces a 1.2G GAF file which makes more sense.
+
+* dozyg
+Like edgyeet, it indexes quickly in about a second.
+Segfaults while mapping the first sequence.
+
+#+BEGIN_SRC
+./scripts/mapping_dozyg.sh: line 15: 19292 Segmentation fault
+#+END_SRC
+
+* vg giraffe
